force-app/main/default/objects/soptConfig__c/soptConfig__c.object-meta.xml
<CustomObject>
    <description>Holds the configuration object for all types of tools.</description>
    <label>Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>