force-app/main/default/objects/soptConfig__c/fields/txtaLabel_11__c.field-meta.xml
<CustomField>
    <fullName>txtaLabel_11__c</fullName>
    <label>Label 11</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>