force-app/main/default/objects/soptConfig__c/fields/txtaLabel_12__c.field-meta.xml
<CustomField>
    <fullName>txtaLabel_12__c</fullName>
    <label>Label 12</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>