force-app/main/default/objects/soptConfig__c/fields/txtaLabel_13__c.field-meta.xml
<CustomField>
    <fullName>txtaLabel_13__c</fullName>
    <label>Label 13</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>