force-app/main/default/objects/soptConfig__c/fields/txtLabel_10_Target_Area__c.field-meta.xml
<CustomField>
    <fullName>txtLabel_10_Target_Area__c</fullName>
    <label>Label 10 Target Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>