force-app/main/default/objects/soptConfig__c/fields/txtLabel_12_Target_Area__c.field-meta.xml
<CustomField>
    <fullName>txtLabel_12_Target_Area__c</fullName>
    <label>Label 12 Target Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>